--- a/public/sl-vue-tree-next-dark.css
+++ b/public/sl-vue-tree-next-dark.css
@@ -1,4 +1,4 @@
-.sl-vue-tree {
+.sl-vue-tree-next {
     position: relative;
     cursor: default;
     -webkit-touch-callout: none; /* iOS Safari */
@@ -9,30 +9,30 @@
     user-select: none;
 }
 
-.sl-vue-tree.sl-vue-tree-root {
+.sl-vue-tree-next.sl-vue-tree-next-root {
     border: 1px solid rgb(9, 22, 29);
     background-color: rgb(9, 22, 29);
     color: rgba(255, 255, 255, 0.5);
     border-radius: 3px;
 }
 
-.sl-vue-tree-root > .sl-vue-tree-nodes-list {
+.sl-vue-tree-next-root > .sl-vue-tree-next-nodes-list {
     overflow: hidden;
     position: relative;
     padding-bottom: 4px;
 }
 
-.sl-vue-tree-selected > .sl-vue-tree-node-item {
+.sl-vue-tree-next-selected > .sl-vue-tree-next-node-item {
     background-color: #13242d;
     color: white;
 }
 
-.sl-vue-tree-node-item:hover,
-.sl-vue-tree-node-item.sl-vue-tree-cursor-hover {
+.sl-vue-tree-next-node-item:hover,
+.sl-vue-tree-next-node-item.sl-vue-tree-next-cursor-hover {
     color: white;
 }
 
-.sl-vue-tree-node-item {
+.sl-vue-tree-next-node-item {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -43,37 +43,35 @@
     border: 1px solid transparent;
 }
 
-
-.sl-vue-tree-node-item.sl-vue-tree-cursor-inside {
+.sl-vue-tree-next-node-item.sl-vue-tree-next-cursor-inside {
     border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.sl-vue-tree-gap {
+.sl-vue-tree-next-gap {
     width: 25px;
     min-height: 1px;
-
 }
 
-.sl-vue-tree-toggle {
+.sl-vue-tree-next-toggle {
     display: inline-block;
     text-align: left;
     width: 20px;
 }
 
-.sl-vue-tree-sidebar {
+.sl-vue-tree-next-sidebar {
     margin-left: auto;
 }
 
-.sl-vue-tree-cursor {
+.sl-vue-tree-next-cursor {
     position: absolute;
     border: 1px solid rgba(255, 255, 255, 0.5);
     height: 1px;
     width: 100%;
 }
 
-.sl-vue-tree-drag-info {
+.sl-vue-tree-next-drag-info {
     position: absolute;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0.5;
     margin-left: 20px;
     padding: 5px 10px;
