--- a/public/sl-vue-tree-next-minimal.css
+++ b/public/sl-vue-tree-next-minimal.css
@@ -1,4 +1,4 @@
-.sl-vue-tree {
+.sl-vue-tree-next {
     position: relative;
     cursor: default;
     -webkit-touch-callout: none; /* iOS Safari */
@@ -9,51 +9,50 @@
     user-select: none;
 }
 
-.sl-vue-tree-root > .sl-vue-tree-nodes-list {
+.sl-vue-tree-next-root > .sl-vue-tree-next-nodes-list {
     overflow: hidden;
     position: relative;
     padding-bottom: 4px;
 }
 
-.sl-vue-tree-selected > .sl-vue-tree-node-item {
+.sl-vue-tree-next-selected > .sl-vue-tree-next-node-item {
     background-color: rgba(100, 100, 255, 0.5);
 }
 
-.sl-vue-tree-node-list {
+.sl-vue-tree-next-node-list {
     position: relative;
     display: flex;
     flex-direction: row;
 }
 
-.sl-vue-tree-node-item {
+.sl-vue-tree-next-node-item {
     position: relative;
     display: flex;
     flex-direction: row;
 }
-.sl-vue-tree-node-item.sl-vue-tree-cursor-inside {
+.sl-vue-tree-next-node-item.sl-vue-tree-next-cursor-inside {
     outline: 1px solid rgba(100, 100, 255, 0.5);
 }
 
-.sl-vue-tree-gap {
+.sl-vue-tree-next-gap {
     width: 20px;
     min-height: 1px;
-
 }
 
-.sl-vue-tree-sidebar {
+.sl-vue-tree-next-sidebar {
     margin-left: auto;
 }
 
-.sl-vue-tree-cursor {
+.sl-vue-tree-next-cursor {
     position: absolute;
     border: 1px solid rgba(100, 100, 255, 0.5);
     height: 1px;
     width: 100%;
 }
 
-.sl-vue-tree-drag-info {
+.sl-vue-tree-next-drag-info {
     position: absolute;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0.5;
     margin-left: 20px;
     margin-bottom: 20px;
